plugins/kotlin/idea/tests/testData/multiplatform/chainedTypeAliasRefinement/native/native.kt
actual typealias <!LINE_MARKER("descr='Has declaration in common module'")!>Common<!> = Short

fun nativeTest(arg: Common) {
    takeCommon(arg)
}